--- a/server/src/sync_buffer/CMakeLists.txt
+++ b/server/src/sync_buffer/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_library(sync_buffer STATIC 
     sync_buffer.c 
-    linked_list.c
+	buffer.c
 )
 
 target_include_directories(sync_buffer PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
