Preparing for server shutdown, added atomic flag

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.10)
 project(kahoot C)
 
+set(CMAKE_BUILD_TYPE Debug)
+
 set(CMAKE_C_STANDARD 17)
 
 add_subdirectory(src)
