Protocol not supported error fix

--- a/server/src/server/CMakeLists.txt
+++ b/server/src/server/CMakeLists.txt
@@ -5,5 +5,4 @@ add_library(server STATIC
 
 target_include_directories(server PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
-target_link_libraries(server PRIVATE sync_buffer)
-target_link_libraries(server PRIVATE sockets)
+target_link_libraries(server PRIVATE sync_buffer sockets)
