Structured Michaela's code

--- a/server/src/lobby/CMakeLists.txt
+++ b/server/src/lobby/CMakeLists.txt
@@ -5,4 +5,4 @@ add_library(lobby STATIC
 
 target_include_directories(lobby PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
-target_link_libraries(lobby PRIVATE sync_buffer sockets server)
+target_link_libraries(lobby PRIVATE sync_buffer sockets server sync_list)
