Lobby almost done

--- a/server/src/lobby/CMakeLists.txt
+++ b/server/src/lobby/CMakeLists.txt
@@ -1,8 +1,9 @@
 add_library(lobby STATIC
     lobby.c
     lobby_communication.c
+	question.c
 )
 
 target_include_directories(lobby PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
-target_link_libraries(lobby PRIVATE sync_buffer sockets server sync_list)
+target_link_libraries(lobby PRIVATE sockets sync_list)
